--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,14 +28,12 @@
                 <!-- TEDDY EDIT: moving "Login" and "Register" to this "Account Settings" tab-->
                 <!-- <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Account Settings"><i class="fa fa-user"></i></a> -->
                 <div class="w3-dropdown-hover">
-                    <button class="w3-button w3-padding-large" title="Account Settings"><i class="fa fa-user"></i></button>
-                    <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-                        <a href="/login" class="w3-bar-item w3-button">Login</a>
-                        <a href="/register" class="w3-bar-item w3-button">Register</a>
-                    </div>
-                </div>
+                    <a href="/AccountSettings" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="My Profile"><i class="fa fa-user"></i></a>
 
-                <a href="/Messages" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages"><i class="fa fa-envelope"></i></a>
+                </div>
+                
+                
+
                 <div class="w3-dropdown-hover w3-hide-small">
                     <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
                     <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
@@ -44,9 +42,18 @@
                         <a href="#" class="w3-bar-item w3-button">John likes your post</a>
                     </div>
                 </div>
-                <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Profile">
+
+
+                <div class="w3-dropdown-hover w3-right">
                     <img src="https://www.w3schools.com/w3images/avatar2.png" class="w3-circle" style="height:23px;width:23px" alt="Avatar">
-                </a>
+                    <div class="w3-dropdown-content w3-bar-block w3-border" style="right:0">
+                        <a href="/logout" class="w3-bar-item w3-button">Logout</a>
+
+                    </div>
+                </div>
+                
+
+
             </div>
         </div>
 
@@ -93,7 +100,7 @@
                             <div id="Demo2" class="w3-hide w3-container">
                                 <p>Some other text..</p>
                             </div>
-                            <a href="/MyCreations" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-play" aria-hidden="true"></i> My Creations</a>
+                            <a href="/MyCreations" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-play" aria-hidden="true"></i> My Profile</a>
                             <div id="Demo3" class="w3-hide w3-container">
                                 <div class="w3-row-padding">
                                     
